--- a/examples/chat/public/index.html
+++ b/examples/chat/public/index.html
@@ -1,28 +1,60 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Socket.IO Chat Example</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <ul class="pages">
-    <li class="chat page">
-      <div class="chatArea">
-        <ul class="messages"></ul>
-      </div>
-      <input class="inputMessage" placeholder="Type here..."/>
-    </li>
-    <li class="login page">
-      <div class="form">
-        <h3 class="title">What's your nickname?</h3>
-        <input class="usernameInput" type="text" maxlength="14" />
-      </div>
-    </li>
-  </ul>
 
-  <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-  <script src="/socket.io/socket.io.js"></script>
-  <script src="/main.js"></script>
+<head>
+    <meta charset="UTF-8">
+    <title>Socket.IO Chat Example</title>
+    <link rel="stylesheet" href="style.css">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+</head>
+
+<body>
+    <ul class="pages">
+        <li class="chat page">
+            <div class="chatArea">
+                <ul class="messages"></ul>
+            </div>
+            <input class="inputMessage" placeholder="Type here..." />
+        </li>
+        <li class="todo page d-flex align-items-center">
+            <div class="todo-area container-md h-75 p-4">
+                <div class="todo-title">
+                    <div class="row py-2">
+                        <div class="col">
+                            <label class="w-100 text-center">ZY's Todo List</label>
+                        </div>
+                    </div>
+                </div>
+                <div class="add-todo">
+                    <div class="row my-2">
+                        <form id="add-item-form" class="col">
+                            <div class="input-group mb-3">
+                                <input id="add-item-input" type="text" class="form-control w-50" name="item" placeholder="Add a new item" aria-label="Add a new item" aria-describedby="add-item-btn" required>
+                                <span class="input-group-text" id="addon-wrapping">@</span>
+                                <input id="add-item-name-input" type="text" class="form-control" name="owner" placeholder="Enter your name" aria-label="Enter your name" aria-describedby="add-item-btn" required>
+                                <button id="add-item-btn" class="btn btn-primary" type="submit">Add</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+                <ul id="todo-list-container" class="list-group">
+                </ul>
+            </div>
+        </li>
+        <li class="login page">
+            <div class="form">
+                <h3 class="title">What's your name?</h3>
+                <input class="usernameInput" type="text" maxlength="14" />
+            </div>
+        </li>
+    </ul>
+
+    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="/main.js"></script>
 </body>
+
 </html>
