--- a/examples/chat/public/index.html
+++ b/examples/chat/public/index.html
@@ -3,12 +3,17 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Socket.IO Chat Example</title>
+    <title>Queue Up</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon"/>
+    
     <link rel="stylesheet" href="style.css">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+    
+    <link rel="stylesheet" type="text/css" href="https://csshake.surge.sh/csshake.min.css">
+
 </head>
 
 <body>
@@ -21,10 +26,15 @@
         </li>
         <li class="todo page d-flex align-items-center">
             <div class="todo-area container-md h-75 p-4">
-                <div class="todo-title">
+                <div class="todo-title" style="z-index: 5">
+                    <div id="queue-number-container" class="row py-2" style="display: none">
+                        <div class="col">
+                            <label id="queue-label" class="w-100 text-center h1 shake-constant">Your place in queue: <label id="queue-number">0</label></label>
+                        </div>
+                    </div>
                     <div class="row py-2">
                         <div class="col">
-                            <label class="w-100 text-center">ZY's Todo List</label>
+                            <label class="w-100 text-center">Submit a request</label>
                         </div>
                     </div>
                 </div>
@@ -34,14 +44,51 @@
                             <div class="input-group mb-3">
                                 <input id="add-item-input" type="text" class="form-control w-50" name="item" placeholder="Add a new item" aria-label="Add a new item" aria-describedby="add-item-btn" required>
                                 <span class="input-group-text" id="addon-wrapping">@</span>
-                                <input id="add-item-name-input" type="text" class="form-control" name="owner" placeholder="Enter your name" aria-label="Enter your name" aria-describedby="add-item-btn" required>
-                                <button id="add-item-btn" class="btn btn-primary" type="submit">Add</button>
+                                <input id="add-item-name-input" type="text" class="form-control" name="owner" placeholder="Enter your name" aria-label="Enter your name" aria-describedby="add-item-btn" readonly>
+                                <button id="add-item-btn" class="btn btn-primary" type="submit">Submit</button>
                             </div>
                         </form>
                     </div>
                 </div>
-                <ul id="todo-list-container" class="list-group">
-                </ul>
+                <div class="queue-doing">
+                    <div class="row">
+                        <div class="col">
+                            <label class="py-2 text-primary">In progress</label>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">   
+                            <ul id="todo-list-container" class="list-group">
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="queue-completed">
+                    <div class="row">
+                        <div class="col">
+                            <label class="py-2 text-success">Completed</label>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">   
+                            <ul id="todo-list-completed-container" class="list-group">
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="queue-not-doing">
+                    <div class="row">
+                        <div class="col">
+                            <label class="py-2 text-danger">Not doing</label>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">   
+                            <ul id="todo-list-not-doing-container" class="list-group">
+                            </ul>
+                        </div>
+                    </div>
+                </div>
             </div>
         </li>
         <li class="login page">
