--- a/examples/chat/public/index.html
+++ b/examples/chat/public/index.html
@@ -14,6 +14,8 @@
     
     <link rel="stylesheet" type="text/css" href="https://csshake.surge.sh/csshake.min.css">
 
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.4.0/dist/confetti.browser.min.js"></script>
+
 </head>
 
 <body>
